--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+.wrapper {
+	padding-top: 20px;
+}
 
 .hero-image {
 	width: 150px;
@@ -10,4 +13,16 @@
 .btn {
     white-space: normal;
     word-wrap: break-word; 
+}
+
+.training-options-button {
+	height: 110px;
+}
+
+.button-color-black {
+	color: #000;
+}
+
+.total-training-result {
+	margin-top: 20px;
 }
