--- a/style.css
+++ b/style.css
@@ -90,3 +90,37 @@
 	margin-top: 30px;
 	margin-bottom: 30px;
 }
+
+.win-screen {
+	height: 100vh;
+	width: 100%
+	width: 100%;
+	background-color: white;
+	z-index: 5;
+	position: relative;
+}
+
+.win-result {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.death-screen {
+	height: 100vh;
+	width: 100%;
+	width: 100%;
+	background-image: url(images/graveyard.svg);
+	background-size: cover;
+	z-index: 5;
+	position: relative;
+}
+
+.death-result {
+	position: absolute;
+	color: white;
+	top: 10%;
+	left: 50%;
+	transform: translateX(-50%);
+}
